# studiesX

./: .gitignore
meta_dbe_pc/: README.md  sales_report.ipynb
meta_dbe_pc/db-capstone-project/: ERD.mwb  ERD.mwb.bak  LittleLemonDB.sql  insert_data.sql  mod2_ex1.sql  mod2_ex2.sql  mod2_ex3.sql  mod2_ex4.sql  mod3_nb.ipynb  mod3_tableau.twb
meta_dbe_pc/db-capstone-project/results/: CancelOrderResult.csv  GetMaxQtyResult.csv  JoinsViewResult.csv  OrdersViewresult.csv  SubQueryResult.csv
ml_prax/: README.md
ml_prax/andrejk_yt_series/: nn_backprop.ipynb
ml_prax/hoLLM/: FineTuneEmbedModel.ipynb  langchain_example.ipynb  main.py  pyproject.toml  react_agent_llm.ipynb  requirements.txt  streamlit_example.py  text_classification.ipynb
ml_prax/unsupervised/: unsupervised_learning.ipynb
python_prax/: README.md  crash_course.ipynb  daily_prac.py
python_prax/arrays/: contains_duplicate.py  encode_decode.py  grp_anagrams.py  longest_common_sequence.py  prod_except_self.py  top_k_frequent.py  two_sum.py  valid_anagram.py  valid_sudoku.py
python_prax/binary_search/: bin_search.py  key_value_store.py  min_rot_search.py  rotated_array.py  search_matrix.py
python_prax/recursion/: fibonacci_series.py
python_prax/sliding_windows/: buy_sell.py  char_replace.py  long_substr.py  max_window.py
python_prax/stacks/: car_fleet.py  daily_temp.py  min_stack.py  reverse_polish.py  valid_paranthesis.py
python_prax/two_pointers/: three_sum.py  two_sum2.py  valid_palindrome.py  water_container.py  water_trap.py
torch_prax/: basics.ipynb  benchmark.py  model.pth
(+26 files in other folders)
