[project]
name = "hollm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datamapplot>=0.2.2",
    "datasets>=4.8.2",
    "dbscan>=1.0.0",
    "ddgs>=9.11.4",
    "duckduckgo-search>=8.1.1",
    "hdbscan>=0.8.41",
    "huggingface>=0.0.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langgraph-supervisor>=0.0.31",
    "langsmith>=0.7.20",
    "llama-cpp-python>=0.3.16",
    "mlx-lm>=0.31.1",
    "numpy>=2.4.3",
    "pandas<3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "streamlit==1.42.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "umap-learn>=0.5.11",
    "watchdog>=6.0.0",
]
